Moved descriptions into li elements

--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -112,6 +112,9 @@ body {
     }
     li {
         font-style: italic;
+        p{
+            font-style:normal;
+        }
     }
     span {
         font-size: 16px;
