--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -84,6 +84,8 @@ body {
     margin-left: 20px; }
   #right li {
     font-style: italic; }
+    #right li p {
+      font-style: normal; }
   #right span {
     font-size: 16px;
     font-style: normal;
