Added printing style sheet

--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -158,3 +158,10 @@ ul {
 p {
   font-family: Helvetica;
   margin-left: 30px; }
+
+@media print {
+  .footer {
+    display: none; }
+
+  .header {
+    background-color: white; } }
