Changed color scheme, added modularity for colors

--- a/SCSS/helpers/_colors.scss
+++ b/SCSS/helpers/_colors.scss
@@ -1,10 +1,9 @@
-$header-color:  aliceblue;
-//$background-color: white;
-$button-color: #ffd8cc;
-//$button-color: #efeff5;
+$background-color: lightgrey;
 
-//$header-color: white;
-$background-color: white;
-$left-color: white;
-$right-color: white;
+$header-color:  slategrey;
+$header-text-color: lightgrey;
 
+$button-text-color: grey;
+$button-hover-color: lightgrey;
+
+$divider-color: slategrey;
