--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -1,24 +1,26 @@
 body {
   max-width: 8.5in;
-  margin: auto; }
+  margin: auto;
+  background-color: lightgrey; }
 
 .header {
   z-index: 2;
   top: 10px;
   position: fixed;
   max-width: 8.5in;
-  width: 98%;
+  width: 100%;
   min-width: 5.5in;
+  color: lightgrey;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
-  background-color: aliceblue; }
+  background-color: slategrey; }
   .header #name {
     font-size: 40px;
     font-weight: bold;
     font-family: Garamond;
     display: inline-block;
     margin-top: 10px;
-    margin-left: 20px;
+    margin-left: 15px;
     margin-bottom: 10px; }
   .header #contact {
     font-size: 18px;
@@ -26,20 +28,20 @@ body {
     float: right;
     display: inline;
     text-align: right;
-    margin: 15px 20px 0px 0px; }
+    margin: 15px 15px 0px 0px; }
   .header #objective {
     text-align: left;
     font-size: 18px;
     font-style: italic;
-    margin: 0px 0px 10px 20px; }
+    margin: 0px 0px 10px 10px; }
 
 .footer {
   z-index: 2;
   height: 40px;
   max-width: 8.5in;
-  width: 98%;
+  width: 100%;
   min-width: 5.5in;
-  background-color: aliceblue;
+  background-color: slategrey;
   font-family: Helvetica;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
@@ -51,7 +53,8 @@ body {
   .footer p {
     margin-top: 10px;
     display: block;
-    color: black; }
+    color: lightgrey;
+    text-align: center; }
 
 .footer:hover {
   opacity: 0.5; }
@@ -59,7 +62,7 @@ body {
 .backboard {
   position: fixed;
   z-index: 1;
-  background-color: white;
+  background-color: lightgrey;
   max-width: 8.5in;
   width: 100%;
   min-width: 5in; }
@@ -111,7 +114,7 @@ body {
   font-family: Helvetica;
   font-size: 25px;
   border-radius: 15px;
-  background-color: white;
+  background-color: lightgrey;
   height: 2in;
   -webkt-transition-duration: 0.4s;
   transition-duration: 0.4s; }
@@ -120,8 +123,8 @@ body {
     color: grey; }
 
 .button:hover {
-  opacity: 0.5;
-  background-color: aliceblue; }
+  opacity: 0.2;
+  background-color: lightgrey; }
 
 h5 {
   font-family: Helvetica;
@@ -138,7 +141,7 @@ h3 {
   height: 95px; }
 
 .divider {
-  background-color: lightgrey;
+  background-color: slategrey;
   height: 2px;
   width: 8in;
   display: block;
@@ -163,5 +166,12 @@ p {
   .footer {
     display: none; }
 
+  body {
+    background-color: white; }
+
   .header {
-    background-color: white; } }
+    background-color: white;
+    color: black; }
+
+  .backboard {
+    display: none; } }
