--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -5,6 +5,7 @@ $ser: Garamond;
 body {
     max-width: 8.5in;
     margin:auto;
+    background-color:$background-color;
 }
 
 .header {
@@ -12,8 +13,9 @@ body {
     top: 10px;
     position: fixed;
     max-width: 8.5in;
-    width: 98%;
+    width: 100%;
     min-width: 5.5in;
+    color: lightgrey;
     border : {
         top-left-radius: 15px;
         top-right-radius: 15px;
@@ -28,7 +30,7 @@ body {
         display:inline-block;
         margin: {
             top: 10px;
-            left: 20px;
+            left: 15px;
             bottom: 10px;
         }
     }
@@ -40,7 +42,7 @@ body {
         float:right;
         display:inline;
         text-align: right;
-        margin:15px 20px 0px 0px;
+        margin:15px 15px 0px 0px;
     }
     #objective {
         text-align: left;
@@ -48,7 +50,7 @@ body {
             size: 18px;
             style: italic;
         }
-        margin: 0px 0px 10px 20px;
+        margin: 0px 0px 10px 10px;
     }
 }
 
@@ -56,7 +58,7 @@ body {
     z-index: 2;
     height: 40px;
     max-width: 8.5in;
-    width: 98%;
+    width: 100%;
     min-width: 5.5in;
     background-color:$header-color;
     font-family:$sans;
@@ -70,7 +72,8 @@ body {
     p {
         margin-top: 10px;
         display: block;
-        color: black;
+        color: $header-text-color;
+        text-align: center;
     }
     -webkt-transition-duration: 0.4s;
     transition-duration: 0.4s;
@@ -143,18 +146,18 @@ body {
     font-family: $sans;
     font-size:25px;
     border-radius: 15px;
-    background-color:white;
+    background-color:$background-color;
     height: 8in/$numButtons;
     -webkt-transition-duration: 0.4s;
     transition-duration: 0.4s;
     div {
         padding:8in/(2*$numButtons);
-        color:grey;
+        color:$button-text-color;
     }
 }
 .button:hover {
-    opacity: 0.5;
-    background-color:aliceblue;
+    opacity: 0.2;
+    background-color:$button-hover-color;
 }
 h5 {
     font-family: $sans;
@@ -173,7 +176,7 @@ h3{
     height: 95px;
 }
 .divider {
-    background-color:lightgrey;
+    background-color:$divider-color;
     height: 2px;
     width: 8in;
     display: block;
@@ -202,11 +205,17 @@ p {
 }
 
 @media print {
-
     .footer  {
         display:none;
     }
-    .header{
+    body {
+        background-color: white;
+    }
+    .header {
         background-color:white;
+        color:black;
+    }
+    .backboard{
+        display: none;
     }
 }
