Updated resume and site colors

--- a/SCSS/helpers/_colors.scss
+++ b/SCSS/helpers/_colors.scss
@@ -1,9 +1,9 @@
-$background-color: lightgrey;
+$background-color: azure;
 
 $header-color:  slategrey;
-$header-text-color: lightgrey;
+$header-text-color: azure;
 
 $button-text-color: grey;
-$button-hover-color: lightgrey;
+$button-hover-color: azure;
 
 $divider-color: slategrey;
