--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -104,9 +104,11 @@ body {
     min-width: 155px;
     margin-bottom: 50px;
     float: left;
-    width: 69%;
+    width: 66%;
+    
+    
     p {
-        font-size: 14px;
+        font-size: 16px;
         margin:{
             top: 2px;
             bottom: 4px;
@@ -125,12 +127,18 @@ body {
         font-style: bold;
     }
 }
+#side-divider {
+    height:60%;
+    width: 4px;
+    display: block;
+    background-color: black;
+}
 #left {
     float: left;
     width: 30%;
     max-width: 3in;
     min-width: 155px;
-    margin-right: 1%;
+    margin-right: 4%;
 }
 
 .options {
@@ -160,11 +168,15 @@ body {
     background-color:$button-hover-color;
 }
 h5 {
+    font-size:15px;
     font-family: $sans;
     margin-left: 10px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 h3{ 
     font-family: $ser;
+    font-size:20px;
     margin : {
         left: 20px;
         top: 0px;
@@ -173,7 +185,7 @@ h3{
 }
 #wrapper{
     display: block;
-    height: 95px;
+    height: 115px;
 }
 .divider {
     background-color:$divider-color;
@@ -204,6 +216,28 @@ p {
     margin-left: 30px;
 }
 
+#resume {
+    
+    p {
+        font-size: 14px;
+        margin:{
+            top: 2px;
+            bottom: 4px;
+            left: 20px;
+        }
+    }
+    li {
+//        font-style: italic;
+        p{
+            font-style:normal;
+        }
+    }
+    span {
+        font-size: 16px;
+        font-style:normal;
+        font-style: bold;
+    }
+}
 @media print {
     .footer  {
         display:none;
